--- a/templates/status-bar.html.twig
+++ b/templates/status-bar.html.twig
@@ -3,7 +3,7 @@
         <button type="button" class="btn btn-default success">Droid report <span class="glyphicon glyphicon-ok pull-right" aria-hidden="true"></span></button>
     </div>
     <div class="btn-group" role="group">
-        <button type="button" class="btn btn-default success">Schema Agreed <span class="glyphicon glyphicon-ok pull-right" aria-hidden="true"></span></button>
+        <button type="button" class="btn btn-default success">Schema agreed <span class="glyphicon glyphicon-ok pull-right" aria-hidden="true"></span></button>
     </div>
     <div class="btn-group" role="group">
         <button type="button" class="btn btn-default">Upload CSV</button>
