--- a/templates/transfer-details.html.twig
+++ b/templates/transfer-details.html.twig
@@ -112,7 +112,7 @@
             </div>
             <form action="/metadata-upload" method="post" id="metadata-upload">
                 <div class="panel panel-default">
-                    <div class="panel-heading">Select metadata for transfer</div>
+                    <div class="panel-heading">Select metadata for upload</div>
                     <div class="panel-body">
                         <div class="input-group">
                             <input data-show-preview="true" type="file" class="form-control" placeholder="Upload CSV"
