--- a/templates/search-results.html.twig
+++ b/templates/search-results.html.twig
@@ -11,7 +11,7 @@
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         Filter by:
-                        </div>
+                    </div>
                     <div class="panel-body">
                         <h3>Collection</h3>
                         <div class="checkbox">
@@ -19,10 +19,10 @@
                         </div>
                         <h3>Document type</h3>
                         <div class="checkbox">
-                            <label><input type="checkbox" value="" checked="true">All</label>
+                            <label><input type="checkbox" value="">All</label>
                         </div>
                         <div class="checkbox">
-                            <label><input type="checkbox" value="">Open records</label>
+                            <label><input type="checkbox" value="" checked="true">Open records</label>
                         </div>
                         <div class="checkbox">
                             <label><input type="checkbox" value="">Closed records</label>
@@ -34,27 +34,13 @@
                 </div>
             </div>
             <div class="col-md-8">
-                <div class="list-group">
-                    <a href="/record-preview" class="list-group-item">
-                      <h3>Record name</h3>
-                      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
-                    </a>
-                    <a href="/record-preview" class="list-group-item">
-                        <h3>Record name</h3>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
-                    </a>
-                    <a href="/record-preview" class="list-group-item">
-                        <h3>Record name</h3>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
-                    </a>
-                    <a href="/record-preview" class="list-group-item">
-                        <h3>Record name</h3>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
-                    </a>
-                    <a href="/record-preview" class="list-group-item">
-                        <h3>Record name</h3>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
-                    </a>
+                <div class="list-group search-results">
+                    {% for i in 1..5 %}
+                        <a href="/record-preview" class="list-group-item">
+                            <h3>BT 95/1</h3>
+                            <p>Index (classi sheets) to dissolved companies, for companies numbered between 25885 and 80713 (and incorporated between 1888 and 1904)</p>
+                        </a>
+                    {% endfor %}
                 </div>
                 <nav aria-label="Page navigation">
                     <ul class="pagination">
