Several UI fixes

--- a/templates/metadata-review.html.twig
+++ b/templates/metadata-review.html.twig
@@ -55,6 +55,11 @@
                 </tr>
             </table>
             {{ include('transfer-summary.html.twig') }}
+
+            <div>
+                <a href="/submitted-ok" class="btn btn-default">OK, continue</a>
+                <a href="/" class="btn btn-default">Go back and resubmit metadata</a>
+            </div>
         </div>
     </div>
 {% endblock %}
