--- a/styles/src/_global.scss
+++ b/styles/src/_global.scss
@@ -15,6 +15,12 @@ h1, h2, h3, h4, h5 {
   font-family: 'Bitter', serif;
 }
 
+main {
+  a {
+    text-decoration: underline;
+  }
+}
+
 .success {
   background-color: $success;
 }
