--- a/templates/aggregate-transfers.html.twig
+++ b/templates/aggregate-transfers.html.twig
@@ -4,7 +4,7 @@
 
 {% block content %}
     <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-        <h1 class="page-header">{{ department_name }} collections</h1>
+        <h1 class="page-header">{{ department_name }} transfers</h1>
         <div class="row">
             <div class="col-md-3">
                 <h4>Filter by</h4>
