--- a/templates/record-preview.html.twig
+++ b/templates/record-preview.html.twig
@@ -8,9 +8,8 @@
         <h2>Record item</h2>
         <div class="panel panel-default">
             <div class="panel-body">
-                {#This record is available to order and view.#}
-                {#<span class="label label-success">Open</span>#}
-                <h4>This record is available to order and view. <span class="label label-success pull-right">Open</span></h4>
+                <h4>This record is available to order and view. <span class="label label-success pull-right">Open</span>
+                </h4>
             </div>
         </div>
         <table class="table table-condensed table-hover">
@@ -21,7 +20,13 @@
             </tr>
             <tr>
                 <td>Description:</td>
-                <td>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</td>
+                <td>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
+                    and scrambled it to make a type specimen book. It has survived not only five centuries, but also the
+                    leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s
+                    with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop
+                    publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                </td>
             </tr>
             <tr>
                 <td>Date:</td>
@@ -43,7 +48,9 @@
         </table>
         <div class="panel panel-default">
             <div class="panel-heading">Context of this record</div>
-            <div class="panel-body">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</div>
+            <div class="panel-body">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+                Ipsum has been the industry's standard dummy text ever since the 1500s
+            </div>
         </div>
     </div>
 {% endblock %}
