--- a/templates/transfer-summary.html.twig
+++ b/templates/transfer-summary.html.twig
@@ -8,7 +8,7 @@
                 <hr>
                 <div class="panel panel-default">
                     <!-- Default panel contents -->
-                    <div class="panel-heading">Total number of records <span class="badge">1,234</span></div>
+                    <div class="panel-heading"><a href="/search-results">All records <span class="badge">1,234</span></a></div>
                     <!-- List group -->
                     <ul class="list-group">
                         <li class="list-group-item"><a href="/search-results">Open records <span
