--- a/templates/status-bar.html.twig
+++ b/templates/status-bar.html.twig
@@ -1,12 +1,12 @@
 <div class="btn-group btn-group-justified status" role="group" aria-label="status">
     <div class="btn-group" role="group">
-        <button type="button" class="btn btn-default success">Droid report <span class="glyphicon glyphicon-ok pull-right" aria-hidden="true"></span></button>
+        <button type="button" class="btn btn-default success">Collection registered <span class="glyphicon glyphicon-ok pull-right" aria-hidden="true"></span></button>
+    </div>
+    <div class="btn-group" role="group">
+        <button type="button" class="btn btn-default success">DROID report provided<span class="glyphicon glyphicon-ok pull-right" aria-hidden="true"></span></button>
     </div>
     <div class="btn-group" role="group">
         <button type="button" class="btn btn-default success">Schema agreed <span class="glyphicon glyphicon-ok pull-right" aria-hidden="true"></span></button>
-    </div>
-    <div class="btn-group" role="group">
-        <button type="button" class="btn btn-default">Upload CSV</button>
     </div>
     <div class="btn-group" role="group">
         <button type="button" class="btn btn-default">Metadata provided</button>
