Additional changes in preparation for presenataion

--- a/templates/record-preview.html.twig
+++ b/templates/record-preview.html.twig
@@ -5,7 +5,7 @@
 {% block content %}
     <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
         <h1 class="page-header">{{ department_name }} Records</h1>
-        <h2>Record item</h2>
+        <h2>BT 95/1</h2>
         <div class="panel panel-default">
             <div class="panel-body">
                 <h4>This record is available to order and view. <span class="label label-success pull-right">Open</span>
@@ -20,13 +20,7 @@
             </tr>
             <tr>
                 <td>Description:</td>
-                <td>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
-                    and scrambled it to make a type specimen book. It has survived not only five centuries, but also the
-                    leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s
-                    with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop
-                    publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-                </td>
+                <td>Index (classi sheets) to dissolved companies, for companies numbered between 25885 and 80713 (and incorporated between 1888 and 1904)</td>
             </tr>
             <tr>
                 <td>Date:</td>
@@ -34,7 +28,7 @@
             </tr>
             <tr>
                 <td>Held by:</td>
-                <td>John Doe</td>
+                <td>The National Archives</td>
             </tr>
             <tr>
                 <td>Legal status:</td>
