Add placeholder for validation failure

--- a/templates/metadata-review.html.twig
+++ b/templates/metadata-review.html.twig
@@ -61,7 +61,7 @@
 
             <div>
                 <a href="/" class="btn btn-default">Delete and resubmit metadata</a>
-                <a href="/submitted-ok" class="btn btn-default">Save and proceed</a>
+                <a href="/metadata-submitted-ok" class="btn btn-default">Save and proceed</a>
             </div>
         </div>
     </div>
