--- a/templates/transfer-details.html.twig
+++ b/templates/transfer-details.html.twig
@@ -22,7 +22,7 @@
             {% endif %}
 
             {% if uploaded == false %}
-            <form action="/metadata-upload" method="post" id="metadata-upload">
+            <form action="/metadata-upload" method="get" id="metadata-upload">
                 <div class="panel panel-default">
                     <div class="panel-heading">Select metadata for upload</div>
                     <div class="panel-body">
